# epitech-semester4

Assembly/minilibc/: .gitignore  Makefile
Assembly/minilibc/src/: index.asm  memcpy.asm  memmove.asm  memset.asm  rindex.asm  strcasecmp.asm  strchr.asm  strcmp.asm  strcspn.asm  strlen.asm  strncmp.asm  strpbrk.asm  strrchr.asm  strstr.asm
Assembly/minilibc/tests/: main.c
Concurrent/panoramix/: .gitignore  Makefile
Concurrent/panoramix/include/: panoramix.h
Concurrent/panoramix/src/: main.c  panoramix.c  parsing.c
Concurrent/plazza/: .gitignore  CMakeLists.txt  Makefile
Concurrent/plazza/include/: Fork.hpp  ISerializable.hpp  MessageQueue.hpp  Pizza.hpp  PizzaFactory.hpp  ThreadPool.hpp
Concurrent/plazza/src/: Kitchen.cpp  Kitchen.hpp  Utils.cpp  Utils.hpp  main.cpp
Concurrent/plazza/src/configuration/: Configuration.cpp  Configuration.hpp
Concurrent/plazza/src/reception/: Reception.cpp  Reception.hpp  Shell.cpp  Shell.hpp
Concurrent/plazza/src/reception/commands/: ExitCommand.cpp  ExitCommand.hpp  ShellCommand.cpp  ShellCommand.hpp  StatusCommand.cpp  StatusCommand.hpp
Concurrent/plazza/tests/: tests_main.cpp
Functional/imageCompressor/: .gitignore  Makefile  imageCompressor.cabal  stack.yaml
Functional/imageCompressor/app/: Main.hs
Functional/imageCompressor/src/: FileParsing.hs  KMeans.hs  Parsing.hs
Functional/imageCompressor/test/: Spec.hs
Functional/wolfram/: .gitignore  Makefile  stack.yaml  wolfram.cabal
Functional/wolfram/app/: Main.hs
Functional/wolfram/src/: Automaton.hs  Parsing.hs
OOP/arcade/: .gitignore  Makefile  README.md
OOP/arcade/doc/: README.md
OOP/arcade/include/: Arcade.hpp  Core.hpp  DynamicLib.hpp
OOP/arcade/include/common/: Data.hpp  Elements.hpp  Input.hpp
OOP/arcade/include/common/display/: IDisplayModule.hpp
OOP/arcade/lib/games/: AGameModule.cpp  AGameModule.hpp
OOP/arcade/src/: Core.cpp  Main.cpp  Parsing.cpp
OOP/nanotekspice/: .gitignore  Makefile
OOP/nanotekspice/include/: NTS.hpp  Parsing.hpp  Simulator.hpp
OOP/nanotekspice/include/components/: AComponent.hpp  Factory.hpp  IComponent.hpp
OOP/nanotekspice/src/: Main.cpp
OOP/nanotekspice/src/components/: AComponent.cpp  Factory.cpp
OOP/nanotekspice/src/parsing/: Parsing.cpp
OOP/nanotekspice/src/simulator/: Simulator.cpp
OOP/raytracer/: .gitignore  CMakeLists.txt
OOP/raytracer/configuration/: config.cfg
OOP/raytracer/include/: ALight.hpp  AOutputGenerator.hpp  APlugin.hpp  APositionedLight.hpp  ARenderer.hpp  AShape.hpp  ILight.hpp  IShape.hpp  Plugin.hpp  Ray.hpp  Utils.hpp
OOP/raytracer/plugins/base/: Base.cpp  Base.hpp  base-plugin.cmake
OOP/raytracer/plugins/base/lights/: PointLight.cpp  PointLight.hpp
OOP/raytracer/plugins/base/output/: PPMOutputGenerator.cpp  PPMOutputGenerator.hpp  SFMLOutputGenerator.cpp  SFMLOutputGenerator.hpp
OOP/raytracer/plugins/base/render/: RenderBasic.cpp  RenderBasic.hpp
OOP/raytracer/plugins/base/shapes/: ConeShape.cpp  ConeShape.hpp  CylinderShape.cpp  CylinderShape.hpp  PlaneShape.cpp  PlaneShape.hpp  ShereShape.cpp  SphereShape.hpp
OOP/raytracer/src/: Scene.cpp  Scene.hpp  main.cpp
OOP/raytracer/src/camera/: Camera.cpp  Camera.hpp
OOP/raytracer/src/configuration/: ConfigurationParser.cpp  ConfigurationParser.hpp
OOP/raytracer/src/plugins/: DynamicLoader.hpp  PluginsManager.cpp  PluginsManager.hpp
YearEnd/: Zappy.md
(+56 files in other folders)
